// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar/> should have the right class names when color success 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_medium"
  role="progressbar"
  style={Object {}}
>
  <span
    className="slds-progress-bar__value slds-progress-bar__value_success"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBar/> should have the right class names when size large 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_large"
  role="progressbar"
  style={Object {}}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBar/> should have the right class names when size medium 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_medium"
  role="progressbar"
  style={Object {}}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBar/> should have the right class names when size small 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_small"
  role="progressbar"
  style={Object {}}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBar/> should have the right class names when size x-small 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_x-small"
  role="progressbar"
  style={Object {}}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBar/> should have the right class names when variant circular 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_medium slds-progress-bar_circular"
  role="progressbar"
  style={Object {}}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBar/> should have the right class names when variant, color and size default and have a custom class 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="slds-progress-bar slds-progress-bar_medium custom-class"
  role="progressbar"
  style={Object {}}
>
  <span
    className="slds-progress-bar__value"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;
